# daily-diary

./: .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
client/: README.md  env.example  next.config.ts  package-lock.json  package.json
client/app/: ClientApp.tsx  EventStreamPanel.tsx  layout.tsx  page.tsx
client/app/api/start/: route.ts
client/app/api/upload/: route.ts
client/app/api/video/[requestId]/: route.ts
client/app/api/video/presigned/: route.ts
client/app/api/video/presigned/[videoKey]/: route.ts
client/app/components/: CustomTextOverlay.tsx  LandingPage.tsx  PhotoDisplay.tsx  PhotoUpload.tsx  VideoDisplay.tsx
client/app/hooks/: useVideoPolling.ts
infrastructure/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lambda/video-api/: package-lock.json  package.json  tsconfig.json
infrastructure/lambda/video-api/src/: index.ts
infrastructure/lambda/video-generator/: event.json  package-lock.json  package.json
infrastructure/lambda/video-generator/src/: getSecret.ts  index.ts
infrastructure/layers/ffmpeg-layer/: Makefile
infrastructure/lib/: daily-diary-stack.ts
infrastructure/test/: daily-diary.test.ts
server/: Dockerfile  README.md  bot.py  caption_generator.py  env.example  frame_creator.py  image_analyzer.py  pcc-deploy.toml  photo_memory_storage.py  pyproject.toml  s3_manager.py  storyboard.py  test_video_generation.py  user_message_processor.py  video_generator.py
specs/: concept.md  ffmpeg-image-concatenation.md  tech-spec.md  video-gen-spec.md
