[project]
name = "gemini-screen-ui-kit"
version = "0.1.0"
description = "Pipecat Example showcasing Gemini Live with screen share capabilities"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pipecat-ai[webrtc,daily,silero,google,cartesia,deepgram,local-smart-turn-v3,runner]>=0.0.90",
    "pipecatcloud>=0.2.6",
    "google-generativeai",
    "boto3>=1.40.0",
    "pillow>=10.0.0"
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]